update logic get recommendation, make sample response view status
